--- a/views/layout.html
+++ b/views/layout.html
@@ -2,6 +2,8 @@
 <html> 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta name="format-detection" content="telephone=no">
     <title></title>
     <meta name="description" content="">
     <meta name="author" content="">
