--- a/views/pay.html
+++ b/views/pay.html
@@ -1,16 +1,17 @@
 
 <div style="margin:1.5em;">
-	<h3><%= order.id %></h3>
-	<h3><%= order.lastEvent %></h3>
-	<h3><%= order.status %></h3>
-	<h3><%= order.itemMoney %></h3>
-	<h3><%= order.freightMoney %></h3>
-	<!-- <h3><%= order.orderMoney %></h3> -->
-	<h3><%= order.prePayId %></h3>
-
+	<div>
+		<h3 style="font-size:1em;color:gray;margin:.5em;">订单编号：<%= order.id %></h3>
+		<h3 style="font-size:1em;color:gray;margin:.5em;">订单状态：待付款</h3>
+		<!-- <h3>订单金额：<%= order.itemMoney + order.freightMoney %></h3> -->
+		<h3 style="font-size:1em;color:gray;margin:.5em;margin-bottom:1em;">订单金额：
+			<b style="font-size:1.5em;color:black;">&yen; <%= order.orderMoney.toFixed(2) %></b></h3>
+		<!-- <h3><%= order.prePayId %></h3> -->
+		<h3 style="font-size:.9em;color:gray;margin:.5em;font-style: italic;"><%= order.lastEvent %></h3>
+	</div>
 
 <h1 class="btn-payment" 
-		style="background-color:red;padding:1em;padding:.8em;text-align:center;">
+		style="background-color:red;padding:1em;padding:.8em;text-align:center;font-size:1.1em;">
 	<span style="font-style:oblique;color:#42CA42;">
 		需付: &yen;<%= order.orderMoney.toFixed(2) %> </span>
 	&nbsp;
